force-app/main/default/objects/FieldDefinition__mdt/FieldDefinition__mdt.object-meta.xml
<CustomObject>
    <label>Field Definition</label>
    <pluralLabel>Field Definitions</pluralLabel>
</CustomObject>