force-app/main/default/objects/FieldDefinition__mdt/fields/APIName__c.field-meta.xml
<CustomField>
    <fullName>APIName__c</fullName>
    <label>API Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>