force-app/main/default/objects/FieldDefinition__mdt/fields/DefaultLabel__c.field-meta.xml
<CustomField>
    <fullName>DefaultLabel__c</fullName>
    <label>Default Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>