force-app/main/default/objects/FieldDefinition__mdt/fields/RegionalsKey__c.field-meta.xml
<CustomField>
    <fullName>RegionalsKey__c</fullName>
    <label>Regionals Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>