force-app/main/default/objects/FieldDefinition__mdt/fields/RelatedObject__c.field-meta.xml
<CustomField>
    <fullName>RelatedObject__c</fullName>
    <label>Related Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>