force-app/main/default/objects/FieldDefinition__mdt/fields/RelatedPicklist__c.field-meta.xml
<CustomField>
    <fullName>RelatedPicklist__c</fullName>
    <label>Related Picklist</label>
    <length>255</length>
    <type>Text</type>
</CustomField>