force-app/main/default/objects/FieldDefinition__mdt/fields/TargetField__c.field-meta.xml
<CustomField>
    <fullName>TargetField__c</fullName>
    <label>Target Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>