force-app/main/default/objects/FieldDefinition__mdt/fields/TargetObject__c.field-meta.xml
<CustomField>
    <fullName>TargetObject__c</fullName>
    <label>Target Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>