force-app/main/default/objects/FieldDefinition__mdt/listViews/Standard.listView-meta.xml
<ListView>
    <fullName>Standard</fullName>
    <columns>MasterLabel</columns>
    <columns>APIName__c</columns>
    <columns>DataType__c</columns>
    <columns>DefaultLabel__c</columns>
    <columns>RegionalsKey__c</columns>
    <columns>RelatedObject__c</columns>
    <columns>RelatedPicklist__c</columns>
    <columns>TargetObject__c</columns>
    <columns>TargetField__c</columns>
    <filterScope>Everything</filterScope>
    <label>Standard</label>
</ListView>